# Kronos

./: .gitignore  .pre-commit-config.yaml  EXPERIMENTS.md  HUGGINGFACE_LOADING_ANALYSIS.md  LOCAL_USAGE_GUIDE.md  README.md  diagnose_huggingface_loading.py  download_model.py  fix_chinese_font_final.py  generate_dummy_data.py  kronos_api.py  kronos_mcp_server.py  multi_chart_finetuning.ipynb  predict_with_config.py  pyproject.toml  requirements.txt  run_a_share_prediction.py  run_a_share_prediction_fixed.py  test_chinese_font.py  view_prediction_results.py  统一时间轴功能说明.md
.claude/: launch.json
.omc/state/: idle-notif-cooldown.json  last-tool-error.json
examples/: README.md  common.py  prediction_akshare_2024-2025.py  prediction_batch_example.py  prediction_cn_markets_day.py  prediction_example.py  prediction_new.py  prediction_new_GUI.py  prediction_wo_vol_example.py
finetune/: config.py  dataset.py  qlib_data_preprocess.py  qlib_test.py  train_predictor.py  train_tokenizer.py
finetune/local_configs/: qlib_smoke_backtest_base.example.json  qlib_smoke_backtest_small.example.json
finetune/utils/: common.py  training_utils.py
finetune_csv/: README.md  README_CN.md  config_loader.py  finetune_base_model.py  finetune_tokenizer.py  train_sequential.py
kronos_studio/: README.md
model/: __init__.py  kronos.py  module.py
mybot/: __init__.py  cli_demo.py  prediction.py  prediction_engine.py  realtime_data.py  server.py
mybot/web/: index.html  package.json
mybot/web/.omc/state/: agent-replay-096787b3-11ca-436b-9520-ce437a929f0f.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
mybot/web/src/: App.tsx  index.css  main.tsx
polymarket_bot/: README.md  main.py
polymarket_bot/config/: settings.py
polymarket_bot/data/: collector.py
polymarket_bot/decision/: __init__.py  engine.py
polymarket_bot/execution/: executor.py
polymarket_bot/model/: kronos_adapter.py
polymarket_bot/monitoring/: logger.py
tests/: conftest.py  optimization test_kronos_regression.py  test_bsq.py  test_kronos_regression.py  test_kv_cache_equivalence.py  test_model_shapes.py  test_modules.py  test_predictor.py  test_sampling.py  test_tokenizer.py
tests/data/: generate_regression_output.py  regression_output_256.csv  regression_output_512.csv
web/frontend/src/components/controllers/: BatchItemCard.tsx  DataSelector.tsx
web/server/: main.py
web/server/db/: migrations.py
web/server/schemas/: saved_result.py
web/server/services/prediction_service/: batch_price_prediction.py  price_prediction.py
web/server/services/result_service/: save_results.py
web/server/tests/: test_prediction_api_errors.py
webui/: README.md  app.py  data_fetcher.py  nse_dashboard.py  requirements.txt  requirements_nse.txt  run.py
webui/templates/: index.html  nse_dashboard.html  records.html
